# Talkinglands-Assignment

./: .gitignore  Makefile  README.md  docker-compose.yaml  pyproject.toml
app/: config.py  di.py  main.py
app/Docker/postgis/init/: 01-init-postgis.sql
app/Docker/python/: Dockerfile
app/api/: points.py  polygon.py
app/models/: point.py  polygon.py  response.py
app/repository/: connection.py
app/repository/spatial_db/: points.py  polygon.py
app/services/: points_service.py  polygon_service.py
