[build-system]
requires = ["setuptools>=42.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "assessment"
version = "0.1.0"
description = "A backend API service for storing, updating, and retrieving spatial data (points and polygons) using FastAPI and PostGIS"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi[standard]>=0.115.12",
    "pygresql>=6.1.0",
]
